--- a/frontend/src/shared/ui/GlassCard/GlassCard.css
+++ b/frontend/src/shared/ui/GlassCard/GlassCard.css
@@ -46,7 +46,7 @@
   -webkit-backdrop-filter: blur(10px) saturate(130%);
   border-radius: 40px;
   border: 1.5px solid rgba(255, 255, 255, 0.4);
-  padding: 60px 40px;
+  padding: 30px 40px 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
